Updated to JUnit 5, Added env testing